@@ -1,8 +1,7 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-
   <parent>
     <groupId>de.gedoplan</groupId>
     <artifactId>v5t11</artifactId>
@@ -11,39 +10,20 @@
 
   <artifactId>v5t11-status</artifactId>
 
-  <packaging>war</packaging>
-
-  <properties>
-    <deltaspike.version>1.8.0</deltaspike.version>
-  </properties>
+  <packaging>jar</packaging>
 
   <build>
     <finalName>${project.artifactId}</finalName>
   </build>
 
   <dependencies>
-    <!-- Main dependencies -->
+    <!--
+      myfaces-quarkus früh einbinden, da sonst Resource Bundles fehlen
+      und Web-Zugriffe hängen (vermutlich Classpath-Konflikte mit JEE und WildFly)
+    -->
     <dependency>
-      <groupId>jakarta.platform</groupId>
-      <artifactId>jakarta.jakartaee-api</artifactId>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.eclipse.microprofile</groupId>
-      <artifactId>microprofile</artifactId>
-      <type>pom</type>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>commons-logging</groupId>
-      <artifactId>commons-logging</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
+      <groupId>org.apache.myfaces.core.extensions.quarkus</groupId>
+      <artifactId>myfaces-quarkus</artifactId>
     </dependency>
 
     <dependency>
@@ -52,20 +32,9 @@
       <version>2.6.2</version>
     </dependency>
 
-    <!-- <dependency> -->
-    <!-- <groupId>com.neuronrobotics</groupId> -->
-    <!-- <artifactId>nrjavaserial</artifactId> -->
-    <!-- <scope>provided</scope> -->
-    <!-- </dependency> -->
-
     <dependency>
-      <groupId>de.gedoplan</groupId>
-      <artifactId>baselibs-persistence</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>de.gedoplan</groupId>
-      <artifactId>baselibs-utils</artifactId>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
     </dependency>
 
     <dependency>
@@ -87,47 +56,49 @@
     </dependency>
 
     <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-    </dependency>
-
-    <!-- Test dependencies -->
-    <dependency>
-      <groupId>io.smallrye.config</groupId>
-      <artifactId>smallrye-config</artifactId>
-      <scope>test</scope>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-resteasy-jsonb</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>org.apache.deltaspike.cdictrl</groupId>
-      <artifactId>deltaspike-cdictrl-api</artifactId>
-      <version>${deltaspike.version}</version>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-rest-client</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-fault-tolerance</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-reactive-messaging-mqtt</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-hibernate-orm</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-jdbc-h2</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-hibernate-validator</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.smallrye.reactive</groupId>
+      <artifactId>smallrye-reactive-messaging-in-memory</artifactId>
       <scope>test</scope>
     </dependency>
 
     <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-api</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-jcl</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-jul</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-slf4j-impl</artifactId>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
 
@@ -138,235 +109,24 @@
     </dependency>
 
     <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
       <groupId>org.skyscreamer</groupId>
       <artifactId>jsonassert</artifactId>
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>de.gedoplan</groupId>
+      <artifactId>v5t11-util-test</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
-
-  <profiles>
-    <!-- Profiles for CDI provider -->
-    <profile>
-      <id>cdi-weld</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <properties>
-        <cdi.provider.name>weld</cdi.provider.name>
-        <cdi.provider.version>3.1.1.Final</cdi.provider.version>
-      </properties>
-      <dependencies>
-        <dependency>
-          <groupId>org.jboss.weld.se</groupId>
-          <artifactId>weld-se-shaded</artifactId>
-          <version>${cdi.provider.version}</version>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.deltaspike.cdictrl</groupId>
-          <artifactId>deltaspike-cdictrl-weld</artifactId>
-          <version>${deltaspike.version}</version>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-
-    <profile>
-      <id>cdi-owb</id>
-      <properties>
-        <cdi.provider.name>owb</cdi.provider.name>
-        <cdi.provider.version>2.0.11</cdi.provider.version>
-      </properties>
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.openwebbeans</groupId>
-          <artifactId>openwebbeans-se</artifactId>
-          <version>${cdi.provider.version}</version>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.deltaspike.cdictrl</groupId>
-          <artifactId>deltaspike-cdictrl-owb</artifactId>
-          <version>${deltaspike.version}</version>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-
-    <!-- Profiles for JSON-B provider -->
-    <profile>
-      <id>jsonb-yasson</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>org.eclipse</groupId>
-          <artifactId>yasson</artifactId>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.glassfish</groupId>
-          <artifactId>javax.json</artifactId>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-
-    <profile>
-      <id>jsonb-johnzon</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.johnzon</groupId>
-          <artifactId>johnzon-jsonb</artifactId>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-
-    <!-- Profil für Docker-Build -->
-    <profile>
-      <id>docker</id>
-
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>io.fabric8</groupId>
-            <artifactId>docker-maven-plugin</artifactId>
-            <configuration>
-              <images>
-                <image>
-                  <name>gedoplan/${project.artifactId}</name>
-                  <build>
-                    <dockerFileDir>${project.basedir}</dockerFileDir>
-                    <assembly>
-                      <descriptorRef>artifact</descriptorRef>
-                    </assembly>
-                  </build>
-                </image>
-              </images>
-            </configuration>
-            <executions>
-              <execution>
-                <phase>install</phase>
-                <goals>
-                  <goal>build</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <!-- Profil zur Installation des WildFly -->
-    <profile>
-      <id>install-wildfly</id>
-      <properties>
-        <version.wildfly>20.0.0.Final</version.wildfly>
-        <installDir>${project.build.directory}</installDir>
-      </properties>
-      <build>
-        <defaultGoal>process-resources</defaultGoal>
-        <plugins>
-          <plugin>
-            <!-- Use dependency plugin for download maven artifacts and copy/unpack -->
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <version>3.0.1</version>
-            <inherited>false</inherited>
-            <configuration>
-              <outputDirectory>${installDir}</outputDirectory>
-            </configuration>
-            <executions>
-              <execution>
-                <id>wildfly</id>
-                <phase>generate-resources</phase>
-                <goals>
-                  <goal>unpack</goal>
-                </goals>
-                <configuration>
-                  <artifactItems>
-                    <artifactItem>
-                      <groupId>org.wildfly</groupId>
-                      <artifactId>wildfly-dist</artifactId>
-                      <version>${version.wildfly}</version>
-                      <type>zip</type>
-                    </artifactItem>
-                  </artifactItems>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-
-          <plugin>
-            <!-- Use antrun plugin for tool specific configurations -->
-            <artifactId>maven-antrun-plugin</artifactId>
-            <version>1.8</version>
-            <executions>
-              <execution>
-                <id>wildfly</id>
-                <phase>process-resources</phase>
-                <goals>
-                  <goal>run</goal>
-                </goals>
-                <configuration>
-                  <target>
-                    <taskdef resource="net/sf/antcontrib/antcontrib.properties" classpathref="maven.plugin.classpath" />
-                    <if>
-                      <not>
-                        <available file="${installDir}/wildfly-${version.wildfly}/standalone-v5t11-status" type="dir" />
-                      </not>
-                      <then>
-                        <echo message="Creating WildFly configuration standalone-v5t11-status" />
-                        <copy todir="${installDir}/wildfly-${version.wildfly}/standalone-v5t11-status">
-                          <fileset dir="${installDir}/wildfly-${version.wildfly}/standalone">
-                            <exclude name="configuration/standalone*.xml" />
-                          </fileset>
-                        </copy>
-                        <copy todir="${installDir}/wildfly-${version.wildfly}/standalone-v5t11-status">
-                          <fileset dir="${installDir}/wildfly-${version.wildfly}/standalone">
-                            <include name="configuration/standalone-full.xml" />
-                          </fileset>
-                        </copy>
-                        <copy todir="${installDir}/wildfly-${version.wildfly}/standalone-v5t11-status/configuration" overwrite="true">
-                          <fileset dir="${basedir}/src/main/wildfly">
-                            <include name="*.properties" />
-                          </fileset>
-                        </copy>
-                        <java dir="${basedir}/src/main/wildfly" jar="${installDir}/wildfly-${version.wildfly}/bin/client/jboss-cli-client.jar" fork="true" failonerror="true">
-                          <env key="JBOSS_HOME" path="${installDir}/wildfly-${version.wildfly}" />
-                          <jvmarg value="--add-modules=java.se" />
-                          <sysproperty key="jboss.server.base.dir" path="${installDir}/wildfly-${version.wildfly}/standalone-v5t11-status" />
-                          <arg value="--file=wildfly-setup.cli" />
-                        </java>
-                      </then>
-                    </if>
-                  </target>
-                </configuration>
-              </execution>
-            </executions>
-
-            <dependencies>
-              <dependency>
-                <groupId>ant-contrib</groupId>
-                <artifactId>ant-contrib</artifactId>
-                <version>20020829</version>
-              </dependency>
-            </dependencies>
-          </plugin>
-        </plugins>
-      </build>
-
-
-    </profile>
-  </profiles>
 
 </project>
